pod-security/baseline/restrict-apparmor-profiles/.chainsaw-test/pod-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    oof.org.io/foo: bar
    container.apparmor.security.beta.kubernetes.io/busybox01: bar/foo
  name: badpod01
spec:
  containers:
  - name: busybox01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  annotations:
    container.apparmor.security.beta.kubernetes.io/busybox01: foo/bar
    oof.org.io/foo: bar
  name: badpod02
spec:
  containers:
  - name: busybox01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01-new
  annotations:
    container.apparmor.security.beta.kubernetes.io/container01: unconfined
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-native-pod
spec:
  securityContext:
    appArmorProfile:
      type: Unconfined
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-native-container
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      appArmorProfile:
        type: Unconfined
